--- a/index.html
+++ b/index.html
@@ -102,14 +102,19 @@
             border-radius: 20px;
             box-shadow: 0 10px 40px rgba(0,0,0,0.3);
             padding: 15px;
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: 100%;
+            max-width: 800px;
+            max-height: calc(100% - 30px);
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
         }
 
         #coloring-canvas {
+            width: 100%;
+            height: 100%;
             max-width: 100%;
             max-height: 100%;
             display: block;
